2007-09-20  Tambet Ingo  <tambet@gmail.com>

	* src/gconf-helpers/gconf-helpers.c (property_value_destroy): Implement.
	(add_property): Implement.
	(read_one_setting_value_from_gconf): Use variable names that actually exist.
	(nm_gconf_read_connection): Ditto.

	* src/applet.c (nma_menu_item_activate): s/devtype/type/.
	(nma_menu_vpn_item_clicked): Use the new VPN activation API.
	(get_vpn_connections): Implement it. AppletDbusConnectionSettings is _SO_
	painful to work with.
	(nma_menu_add_vpn_submenu): Don't use deprecated vpn-connection-info anymore.

	* src/applet-dbus-settings.c (applet_dbus_settings_list_connections): Implement.
	(copy_one_setting_value_to_gconf): Fix some typos. Handle NM_S_TYPE_GVALUE_HASH.

	* src/gconf-helpers/gconf-helpers.c (nm_gconf_get_valuehash_helper): Implement.
	(nm_gconf_set_valuehash_helper): Implement.
	(read_one_setting_value_from_gconf): Handle NM_S_TYPE_GVALUE_HASH.
	(nm_gconf_read_connection): Read VPN data.

2007-09-20  Dan Williams <dcbw@redhat.com>

	* src/connection-editor/nm-connection-editor.glade
		- Remove PPP tab
		- Change SSID to a text field for now

2007-09-20  Dan Williams <dcbw@redhat.com>

	* src/connection-editor/nm-connection-list.c
		- (edit_connection_cb): correctly pull the NMConnection out of the
			tree view selection
		- (load_connections): keep track of the GConf path of the connection
			so that it's easier to update it later if it gets changed underneath
			the connection editor
		- (list_selection_changed_cb, nm_connection_list_init): button
			sensitivity should track selection

2007-09-20  Dan Williams <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.h
	  src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/Makefile.am
	  src/connection-editor/Makefile.am
	  src/Makefile.am
	  configure.ac
		- Move gconf helpers into their own directory and make them a libtool
			library so that both the applet and the connection tool can use them